--- a/EjercicioPractico_2_JeshuaJoelQuesadaVillalobos/src/main/resources/application.properties
+++ b/EjercicioPractico_2_JeshuaJoelQuesadaVillalobos/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Portafolio_Jeshua
 #para definir el puerto donde "escuchará" el servidor
-server.port=8080
+server.port=95
 
 #Para definir el formato de despliegue de fecha/hora del log en la consola
 logging.pattern.dateformat=hh:mm
@@ -12,8 +12,8 @@ spring.main.banner-mode=off
 spring.thymeleaf.cache=false
 
 #Mysql conexion
-spring.datasource.url=jdbc:mysql://localhost:3306/techshop
-spring.datasource.username=usuario_prueba
+spring.datasource.url=jdbc:mysql://localhost:3306/cine_teatro_db
+spring.datasource.username=usuario_general
 spring.datasource.password=Usuar1o_Clave.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -23,7 +23,7 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.type.descriptor.sql.BasicBinder=TRACE
 
-#Definiendo información para utilizar cuenta de Correo para usuarios
+#Se utiliza el mismo correo que el del portafolio para resolver mas rapido el examen
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=techshop.jeshuaquesada@gmail.com
